# GoldenRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aspMain.us.toml  launch.vs.json  patches.toml  us.toml
assets/: launcher.rml  recomp.rcss
icons/: app.rc
include/: recomp_input.h  zelda_config.h
lib/rt64/: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TEXTURE-PACKS.md  cmake-variants.yaml
lib/rt64/.github/workflows/: validate.yml
lib/rt64/examples/: rhi_test.cpp  rt64_render_interface.cpp
lib/rt64/examples/shaders/: RenderInterfaceTestCS.hlsl  RenderInterfaceTestPS.hlsl  RenderInterfaceTestPostPS.hlsl  RenderInterfaceTestPostVS.hlsl  RenderInterfaceTestRT.hlsl  RenderInterfaceTestVS.hlsl
lib/rt64/include/: rt64_extended_gbi.h
lib/rt64/src/common/: rt64_common.cpp  rt64_common.h  rt64_dynamic_libraries.cpp  rt64_dynamic_libraries.h  rt64_elapsed_timer.cpp  rt64_elapsed_timer.h  rt64_emulator_configuration.cpp  rt64_emulator_configuration.h  rt64_enhancement_configuration.cpp  rt64_enhancement_configuration.h  rt64_filesystem.h  rt64_filesystem_combined.h  rt64_filesystem_directory.h  rt64_filesystem_zip.cpp  rt64_filesystem_zip.h  rt64_hlslpp.h  rt64_load_types.cpp  rt64_load_types.h  rt64_mapped_file.cpp  rt64_mapped_file.h  rt64_math.cpp  rt64_math.h  rt64_profiling_timer.cpp  rt64_profiling_timer.h  rt64_replacement_database.cpp  rt64_replacement_database.h  rt64_sommelier.h  rt64_thread.cpp  rt64_thread.h  rt64_timer.cpp  rt64_timer.h  rt64_tmem_hasher.h  rt64_user_configuration.cpp  rt64_user_configuration.h  rt64_user_paths.cpp  rt64_user_paths.h
lib/rt64/src/d3d12/: rt64_d3d12.cpp  rt64_d3d12.h
lib/rt64/src/gbi/: rt64_display_list.h  rt64_f3d.h  rt64_gbi.cpp  rt64_gbi.h  rt64_gbi_extended.cpp  rt64_gbi_extended.h  rt64_gbi_f3d.cpp  rt64_gbi_f3d.h  rt64_gbi_f3dex.cpp  rt64_gbi_f3dex.h  rt64_gbi_f3dex2.cpp  rt64_gbi_f3dex2.h  rt64_gbi_f3dgolden.cpp  rt64_gbi_f3dgolden.h  rt64_gbi_f3dpd.cpp  rt64_gbi_f3dpd.h  rt64_gbi_f3dwave.cpp  rt64_gbi_f3dwave.h  rt64_gbi_f3dzex2.cpp  rt64_gbi_f3dzex2.h  rt64_gbi_l3dex2.cpp  rt64_gbi_l3dex2.h  rt64_gbi_rdp.cpp  rt64_gbi_rdp.h  rt64_gbi_s2dex.cpp  rt64_gbi_s2dex.h  rt64_gbi_s2dex2.cpp  rt64_gbi_s2dex2.h
lib/rt64/src/gui/: rt64_camera_controller.cpp  rt64_camera_controller.h  rt64_debugger_inspector.cpp  rt64_debugger_inspector.h  rt64_file_dialog.cpp  rt64_file_dialog.h  rt64_inspector.cpp  rt64_inspector.h
lib/rt64/src/hle/: rt64_application.cpp  rt64_application.h  rt64_application_window.cpp  rt64_application_window.h  rt64_color_converter.cpp  rt64_color_converter.h  rt64_command_warning.cpp  rt64_command_warning.h  rt64_draw_call.cpp  rt64_draw_call.h  rt64_framebuffer.cpp  rt64_framebuffer.h  rt64_framebuffer_changes.cpp  rt64_framebuffer_changes.h  rt64_framebuffer_manager.cpp  rt64_framebuffer_manager.h  rt64_framebuffer_pair.cpp  rt64_framebuffer_pair.h  rt64_framebuffer_storage.cpp  rt64_framebuffer_storage.h  rt64_game_call.h  rt64_game_configuration.h  rt64_game_frame.cpp  rt64_game_frame.h  rt64_interpreter.cpp  rt64_interpreter.h  rt64_light_manager.cpp  rt64_light_manager.h  rt64_microcode.h  rt64_present.h  rt64_present_queue.cpp  rt64_present_queue.h  rt64_projection.cpp  rt64_projection.h  rt64_rdp.cpp  rt64_rdp.h  rt64_rdp_tmem.cpp  rt64_rdp_tmem.h  rt64_rigid_body.cpp  rt64_rigid_body.h  (+12 more)
lib/rt64/src/imgui/: imgui_impl_sdl2_custom.cpp  imgui_impl_sdl2_custom.h
lib/rt64/src/preset/: rt64_preset.cpp  rt64_preset.h  rt64_preset_draw_call.cpp  rt64_preset_draw_call.h  rt64_preset_inspector.h  rt64_preset_light.cpp  rt64_preset_light.h  rt64_preset_material.cpp  rt64_preset_material.h  rt64_preset_scene.cpp  rt64_preset_scene.h
lib/rt64/src/render/: rt64_buffer_uploader.cpp  rt64_buffer_uploader.h  rt64_descriptor_sets.h  rt64_framebuffer_renderer.cpp  rt64_framebuffer_renderer.h  rt64_framebuffer_renderer_call.h  rt64_geometry_mode.cpp  rt64_geometry_mode.h  rt64_native_target.cpp  rt64_native_target.h  rt64_optimus.cpp  rt64_projection_processor.cpp  rt64_projection_processor.h  rt64_raster_shader.cpp  rt64_raster_shader.h  rt64_raster_shader_cache.cpp  rt64_raster_shader_cache.h  rt64_render_target.cpp  rt64_render_target.h  rt64_render_target_manager.cpp  rt64_render_target_manager.h  rt64_render_worker.cpp  rt64_render_worker.h  rt64_rsp_processor.cpp  rt64_rsp_processor.h  rt64_sampler_library.h  rt64_shader_common.cpp  rt64_shader_common.h  rt64_shader_compiler.cpp  rt64_shader_compiler.h  rt64_shader_library.cpp  rt64_shader_library.h  rt64_texture.h  rt64_texture_cache.cpp  rt64_texture_cache.h  rt64_tile_processor.cpp  rt64_tile_processor.h  rt64_transform_processor.cpp  rt64_transform_processor.h  rt64_upscaler.cpp  (+5 more)
lib/rt64/src/rhi/: rt64_render_hooks.cpp  rt64_render_hooks.h  rt64_render_interface.h  rt64_render_interface_builders.h  rt64_render_interface_types.h
lib/rt64/src/shaders/: Background.hlsli  BicubicScalingCS.hlsl  BlueNoise.hlsli  BoxFilterCS.hlsl  Color.hlsli  ComposePS.hlsl  Constants.hlsli  DebugPS.hlsl  Depth.hlsli  FbChangesClearCS.hlsl  FbChangesDrawColorPS.hlsl  FbChangesDrawDepthPS.hlsl  FbCommon.hlsli  FbReadAnyChangesCS.hlsl  FbReadAnyFullCS.hlsl  FbReinterpretCS.hlsl  FbRendererCommon.hlsli  FbRendererRT.hlsli  FbWriteColorCS.hlsl  FbWriteDepthCS.hlsl  Formats.hlsli  GaussianFilterRGB3x3CS.hlsl  GlobalHitBuffers.hlsli  HistogramAverageCS.hlsl  HistogramClearCS.hlsl  HistogramSetCS.hlsl  IdleCS.hlsl  Im3DCommon.hlsli  Im3DGSLines.hlsl  Im3DGSPoints.hlsl  Im3DPS.hlsl  Im3DVS.hlsl  Library.hlsli  Lights.hlsli  LuminanceHistogramCS.hlsl  Math.hlsli  PostBlendDitherNoisePS.hlsl  PostProcessPS.hlsl  RSPModifyCS.hlsl  RSPProcessCS.hlsl  (+17 more)
patches/: Makefile  audio.c  boot.c  draw_distance.c  externs.h  gfx_patches.c  math_sincos_patch.c  memory.c  misc_funcs.h  patch_helpers.h  patches.h  print.c  structs.h  syms.ld  widescreen.c  workbench.c  workbench2.c
rsp/: .gitignore  aspMain.cpp
src/game/: config.cpp  input.cpp  recomp_api.cpp
src/main/: main.cpp  rt64_render_context.cpp
src/ui/: ui_config.cpp  ui_launcher.cpp
(+670 files in other folders)
